# DateType

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  datetype.py  expected_mypy.txt  expected_mypy_37.txt  pyproject.toml  setup.cfg  tox.ini  tryit.py
.github/workflows/: ci.yml
src/: datetype.py
src/datetype/: __init__.py
src/datetype/test/: test_datetype.py
