[project]
name = "datetype"
version = "2023.11.8"
description = "A type wrapper for the standard library `datetime` that supplies stricter checks, such as making 'datetime' not substitutable for 'date', and separating out Naive and Aware datetimes into separate, mutually-incompatible types."
readme = "README.md"
requires-python = ">=3.7"
# This file is derived directly from typeshed's `datetime.pyi`, so it's the
# typeshed license.
license = {file = "LICENSE.txt"}
authors = [
  {name = "Glyph", email = "glyph@twistedmatrix.com" } # Optional
]
classifiers = [
  "Development Status :: 3 - Alpha",
  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.7",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]
